--- a/data_config.yaml
+++ b/data_config.yaml
@@ -1,26 +1,3 @@
-# arch: CNN
-
-# layers:
-#   conv1:
-#     type: 1dconv
-#     out_channels: 5
-#     kernel_size: 5
-#     stride: 3
-#   relu:
-#     type: relu
-#   mp:
-#     type: maxpool
-#     kernel_size: 2
-#     stride: 2
-#   reshape:
-#     type: reshape
-#   flat:
-#     type: flatten
-#   dense1:
-#     type: dense
-#     output: 1
-#   sigmoid:
-#     type: sigmoid
 
 shared_weights: True
 input_length: 256
@@ -37,8 +14,11 @@ sampling:
     type: butter
 
 training:
-  batch_size: 30
+  batch_size: 32
   forward_skip_size: 200
   cdf: 0.7
   ns_readout_window: 800
   consecutive_deadtime: 2
+  upsampling: 1
+  start_frac: 0.3
+  trigger_time: 200
