--- a/model_configs/config.yaml
+++ b/model_configs/config.yaml
@@ -1,13 +1,13 @@
 architecture:
-  N: 2
+  N: 5
   activation: 'relu' # Posible options: 'relu', 'gelu'
   by_pass: false
-  d_ff: 1024
-  d_model: 32 # Have to be dividable by h
+  d_ff: 256
+  d_model: 128 # Have to be dividable by h
   data_type: trigger # Possible options: 'trigger', 'chunked'
   embed_type: linear # Posible options: 'lin_relu_drop', 'lin_gelu_drop', 'linear',
   encoder_type: normal # Posible options: 'normal', 'none', 'bypass', 'vanilla'
-  final_type: seq_average_linear # Posible options: 'double_linear', 'single_linear', 'seq_average_linear', 'd_model_average_linear'
+  final_type: d_model_average_linear # Posible options: 'double_linear', 'single_linear', 'seq_average_linear', 'd_model_average_linear' for unknown seq_len chose 'd_model_average_linear'
   h: 4
   inherit_model: null
   max_relative_position: 100
@@ -25,7 +25,7 @@ basic:
   model: null
   model_name: Attention is all you need
   model_num: 1
-  model_path: /mnt/md0/halin/Models/model_1/
+  model_path: null
   model_type: base_encoder
 num of parameters:
   MACs: null
