--- a/data_config.yaml
+++ b/data_config.yaml
@@ -27,6 +27,6 @@ training:
   shift_signal_region_away_from_boundaries: False
   set_spurious_signal_to_zero: -1
   extra_gap_per_waveform: 0
-  permute_for_RNN_input: True
+  permute_for_RNN_input: False
   probabilistic_sampling_ensure_signal_region: False
   probabilistic_sampling_oversampling: 1.0
