--- a/model_configs/config.yaml
+++ b/model_configs/config.yaml
@@ -5,22 +5,22 @@ transformer:
     N: 2
     activation: 'relu' # Posible options: 'relu', 'gelu'
     by_pass: false
-    d_ff: 64
-    d_model: 16 # Have to be dividable by h
-    data_type: chunked # Possible options: 'trigger', 'chunked'
+    d_ff: 256
+    d_model: 128 # Have to be dividable by h
+    data_type: trigger # Possible options: 'trigger', 'chunked'
     embed_type: linear # Posible options: 'lin_relu_drop', 'lin_gelu_drop', 'linear',
     encoder_type: normal # Posible options: 'normal', 'none', 'bypass', 'vanilla'
     final_type: d_model_average_linear # Posible options: 'double_linear', 'single_linear', 'seq_average_linear', 'd_model_average_linear' for unknown seq_len chose 'd_model_average_linear'
     h: 4
     inherit_model: null
-    max_relative_position: 10
+    max_relative_position: 16
     residual_type: 'pre_ln' # Posible options: 'pre_ln', 'post_ln'
     n_ant: &n_ant 4
     normalization: layer # Posible options: 'layer', 'batch'
     omega: 10000
     output_shape: null
-    output_size: 128
-    pos_enc_type: Sinusoidal # Posible options: 'Sinusoidal', 'Relative',  'Learnable''None',
+    output_size: 1
+    pos_enc_type: Relative # Posible options: 'Sinusoidal', 'Relative',  'Learnable''None',
     pretrained: null
     seq_len: &seq_len 128
   basic:
@@ -57,7 +57,7 @@ transformer:
     trained: false
     training_time: 0
   training:
-    batch_size: &batch_size 32
+    batch_size: &batch_size 64
     decreas_factor: 0.7
     dropout: 0
     early_stop: 100
