--- a/model_configs/config.yaml
+++ b/model_configs/config.yaml
@@ -5,12 +5,13 @@ transformer:
     N: 2
     activation: 'relu' # Posible options: 'relu', 'gelu'
     by_pass: false
-    d_ff: 256
-    d_model: 128 # Have to be dividable by h
+    d_ff: 64
+    d_model: 32 # Have to be dividable by h
     data_type: trigger # Possible options: 'trigger', 'chunked'
     embed_type: linear # Posible options: 'lin_relu_drop', 'lin_gelu_drop', 'linear',
     encoder_type: normal # Posible options: 'normal', 'none', 'bypass', 'vanilla'
     final_type: d_model_average_linear # Posible options: 'double_linear', 'single_linear', 'seq_average_linear', 'd_model_average_linear' for unknown seq_len chose 'd_model_average_linear'
+    GSA: False
     h: 4
     inherit_model: null
     max_relative_position: 16
@@ -22,6 +23,7 @@ transformer:
     output_size: 1
     pos_enc_type: Relative # Posible options: 'Sinusoidal', 'Relative',  'Learnable''None',
     pretrained: null
+    projection_type: 'linear' # Posible options: 'linear', 'cnn'
     seq_len: &seq_len 128
   basic:
     data_path: ''
