--- a/model_configs/config.yaml
+++ b/model_configs/config.yaml
@@ -1,14 +1,14 @@
 arch: Transformer
-input_length: 128
+input_length: 256
 n_ant: 4
 training:
-  batch_size: 1024
+  batch_size: 256
   cdf: 0.7
   consecutive_deadtime: 2
   extra_gap_per_waveform: 200
   forward_skip_size: 199
   learning_rate: 0.001
-  loss_fn: BCEWithLogits
+  loss_fn: BCE
   ns_readout_window: 800
   permute_for_RNN_input: false
   probabilistic_sampling_ensure_min_signal_fraction: 0.3
@@ -28,12 +28,12 @@ transformer:
     GSA: false
     N: 2
     activation: relu
-    antenna_type: phased
+    antenna_type: LPDA
     by_pass: false
     d_ff: 64
     d_model: 32
-    data_type: trigger
-    embed_type: cnn
+    data_type: chunked
+    embed_type: linear
     encoder_type: vanilla
     final_type: d_model_average_linear
     h: 4
@@ -41,8 +41,8 @@ transformer:
     input_embeddings:
       kernel_size: 3
       stride: 1
-    max_pool: true
-    max_relative_position: null
+    max_pool: false
+    max_relative_position: 32
     n_ant: 4
     normalization: layer
     omega: 10000
@@ -53,7 +53,7 @@ transformer:
     pretrained: null
     projection_type: linear
     residual_type: pre_ln
-    seq_len: 128
+    seq_len: 256
   basic:
     data_path: ''
     model: null
@@ -88,12 +88,12 @@ transformer:
     trained: false
     training_time: 0
   training:
-    batch_size: 1024
+    batch_size: 256
     decreas_factor: 0.7
     dropout: 0
     early_stop: 100
     learning_rate: 0.001
-    loss_function: BCEWithLogits
+    loss_function: BCE
     metric: Efficiency
     num_epochs: 100
     step_size: 7
