--- a/model_configs/config.yaml
+++ b/model_configs/config.yaml
@@ -1,6 +1,6 @@
 arch: Transformer
 input_length: 128
-n_ant: 5
+n_ant: 4
 training:
   batch_size: 1000
   cdf: 0.7
@@ -8,7 +8,7 @@ training:
   extra_gap_per_waveform: 200
   forward_skip_size: 199
   learning_rate: 0.001
-  loss_fn: BCE
+  loss_fn: BCEWithLogits
   ns_readout_window: 800
   permute_for_RNN_input: false
   probabilistic_sampling_ensure_min_signal_fraction: 0.3
@@ -28,7 +28,7 @@ transformer:
     GSA: false
     N: 2
     activation: relu
-    antenna_type: phased
+    antenna_type: LPDA
     by_pass: false
     d_ff: 64
     d_model: 32
@@ -42,8 +42,8 @@ transformer:
       kernel_size: 3
       stride: 1
     max_pool: false
-    max_relative_position: None
-    n_ant: 5
+    max_relative_position: 32
+    n_ant: 4
     normalization: layer
     omega: 10000
     output_shape: null
