--- a/model_configs/config.yaml
+++ b/model_configs/config.yaml
@@ -1,5 +1,5 @@
 arch: Transformer
-input_length: 128
+input_length: 256
 n_ant: 4
 training:
   batch_size: 1024
@@ -39,66 +39,34 @@ transformer:
     by_pass: false
     d_ff: 64
     d_model: 32                       # Size of the model, needs to be a multiple of h
-    data_type: trigger
+    data_type: chunked
     embed_type: cnn
     encoder_type: vanilla             # Options: 'vanilla' which implements the predefined multihead attention, 'normal' which implements everything from scratch
     final_type: d_model_average_linear
     h: 2
     inherit_model: null
     input_embeddings:
-      kernel_size: 3
-      stride: 1
+      kernel_size: 4
+      stride: 4
     max_pool: false                   # Only option if embed_type is 'cnn' or 'ViT'
     max_relative_position: 32         # Only option if pos_enc_type is 'Relative'
     n_ant: 4
     normalization: layer
     omega: 10000
-    output_shape: null
     output_size: 1
     pos_enc_type: Sinusoidal  # Options: Sinusoidal, Relative, Learnable, None
     pre_def_dot_product: false
     pretrained: null
     projection_type: linear
     residual_type: pre_ln
-    seq_len: 128
   basic:
-    #data_path: ''
-    #model: null
-    #model_name: Attention is all you need
-    model_num: 0
+    model_num: 0               # Number of the model 
     model_path: None
     model_type: base_encoder
   num of parameters:
-    FLOPS: 0
-    # MACs: 0
-    # encoder_param: 0
-    # final_param: 0
-    # input_param: 0
-    num_param: 0
-    # pos_param: 0
-    # trained_noise: 0
-    # trained_signal: 0
-  # results only used for training in Hans script  
-  # results:
-  #   Accuracy: 0
-  #   Efficiency: 0
-  #   NSE_AT_100KNRF: 0
-  #   NSE_AT_10KNRF: 0
-  #   NSE_AT_10KROC: 0
-  #   Precission: 0
-  #   TRESH_AT_10KNRF: 0
-  #   current_epoch: 0
-  #   energy: 0
-  #   global_epoch: 0
-  #   nr_area: 0
-  #   power: 0
-  #   roc_area: 0
-  #   test_acc: 0
-  #   trained: false
-  #   training_time: 0
+    FLOPS: 0                  # Values that updats in pre-trigger training Hans script
+    num_param: 0              # Values that updats in pre-trigger training Hans script
 
-  # training:
-  #   #batch_size: 1000
 
 
 
